@@ -1,13 +1,6 @@
 
 [issue 1-8 are part of github-only and are mostly fixed at the moment]
 
-issue 9:
-    when you add new blocks without rebuilding, BlockItemGenerator creates the item images, but fails to create
-        Item-instances in the same run
-    this issue occurs only in the first run with the new block
-    possible fix: create item tables only when BlockItemFactory has finished
-    better fix: remove BlockItemGenerator & replace by drawing of the corresponding block in the slot in 3d
-
 issue 22:
     bug: on an tower of sand blocks if the under block is removed, it updates not the other blocks. If the block above
          is removed, it all updates following bug 23
@@ -90,3 +83,6 @@ issue 151:
     bug: block coordinates are not relative in saves to chunk position making save take longer for outer chunks than for
         inner (see 150 for reproducing)
     fix: make chunk coordinates relative
+
+
+[152]
