@@ -212,7 +212,7 @@ class StateBlockItemGenerator(State.State):
         obj = factory.ItemFactory.ItemFactory().setDefaultItemFile(file).setName(blockname).setHasBlockFlag(True)
         block = G.world.get_active_dimension().get_block((0, 0, 0))
         if type(block) != str and block is not None: block.modify_block_item(obj)
-        obj.finish()
+        obj.finish(task_list=True)
         self.tries = 0
 
 
