@@ -27,12 +27,13 @@ class RegistryInfo(storage.serializer.IDataSerializer.IDataSerializer):
                 for obj in registry.registered_object_map.values():
                     compressed = obj.compressed_info()
                     if compressed not in entries:
-                        logger.println("[REGISTRY][WARN] object '{}' not found in saves!".format(obj.NAME))
+                        logger.println("[REGISTRY][WARN] object '{}' in registry '{}' not found in saves!".format(
+                            obj.NAME, registry.name))
                     else:
                         entries.remove(compressed)
                 for compressed in entries:
-                    logger.println("[REGISTRY][WARN] compressed info '{}' found in saves, but not in active registry".
-                                   format(compressed))
+                    logger.println("[REGISTRY][WARN] compressed info '{}' for registry '{}' found in saves, but not in"
+                                   " active registry".format(compressed, registry.name))
         for name in data:
             logger.println("[REGISTRY][WARN] registry '{}' found in saves, but it is not arrival anymore".format(name))
 
